--- a/第三周作業.ipynb
+++ b/第三周作業.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,16 @@
       "12 13 14 15 16 17 18       9 10 11 12 13 14 15      14 15 16 17 18 19 20\n",
       "19 20 21 22 23 24 25      16 17 18 19 20 21 22      21 22 23 24 25 26 27\n",
       "26 27 28 29 30 31         23 24 25 26 27 28 29      28 29 30 31\n",
-      "                          30\n"
+      "                          30\n",
+      "6\n",
+      "\n",
+      "     June 2020\n",
+      "Mo Tu We Th Fr Sa Su\n",
+      " 1  2  3  4  5  6  7\n",
+      " 8  9 10 11 12 13 14\n",
+      "15 16 17 18 19 20 21\n",
+      "22 23 24 25 26 27 28\n",
+      "29 30\n"
      ]
     }
    ],
